--- a/app/views/admin/document_collection_group_memberships/index.html.erb
+++ b/app/views/admin/document_collection_group_memberships/index.html.erb
@@ -8,17 +8,8 @@
 <% content_for :context, @collection.title %>
 <% content_for :title_margin_bottom, 4 %>
 
-<% if unavailable_document_count(@group.memberships) > 0 %>
-  <% content_for :banner, render("govuk_publishing_components/components/notice", {
-    title: sanitize("<p>Remove #{unavailable_document_count(@group.memberships)} unavailable document(s) within the group.</p>"),
-    show_banner_title: true,
-    data_attributes: {
-      module: "gem-track-click",
-      "track-category": "important-banner",
-      "track-action": "unavailable-documents-exist-in-document-collection-group",
-      "track-label": "Important",
-    },
-  }) %>
+<% if unavailable_document_count(@group.memberships).positive? %>
+  <%= render "unavailable_document_banner", unavailable_document_count: unavailable_document_count(@group.memberships) %>
 <% end %>
 
 <div class="govuk-grid-row">
@@ -56,19 +47,10 @@
       <div class="govuk-table--with-actions app-view-document-collection-group-memberships-index__table">
         <%= render "govuk_publishing_components/components/table", {
           rows: @group.memberships.map do |membership|
-            if document_collection_group_member_unavailable?(membership)
-              title = tag.span("Unavailable Document", class: "govuk-!-font-weight-bold")
-              remove_link = link_to(sanitize("Remove #{tag.span(title, class: "govuk-visually-hidden")}"), confirm_destroy_admin_document_collection_group_document_collection_group_membership_path(@collection, @group, membership), class: "govuk-link gem-link--destructive govuk-!-margin-left-3")
-              links = remove_link
-            else
-              title = document_collection_group_member_title(membership)
-              url = document_collection_group_member_url(membership)
-              view_link = link_to(sanitize("View #{tag.span(title, class: "govuk-visually-hidden")}"), url, class: "govuk-link")
-              remove_link = link_to(sanitize("Remove #{tag.span(title, class: "govuk-visually-hidden")}"), confirm_destroy_admin_document_collection_group_document_collection_group_membership_path(@collection, @group, membership), class: "govuk-link gem-link--destructive govuk-!-margin-left-3")
-              links = view_link + remove_link
-            end
-
-            [{ text: title }, { text: links } ]
+            [
+              { text: document_collection_group_member_title(membership) },
+              { text: document_collection_group_member_links(@collection, @group, membership) },
+            ]
           end,
         } %>
       </div>
