--- a/app/views/admin/role_appointments/_form.html.erb
+++ b/app/views/admin/role_appointments/_form.html.erb
@@ -3,16 +3,18 @@
   label: "Person (required)",
   heading_size: "l",
   name: "role_appointment[person_id]",
-  options:
-    disambiguated_people_names.map { |person_name, person_id|
+  options: (
+    [{ text: "", value: "", selected: false }] +
+    disambiguated_people_names.map do |person_name, person_id|
       {
         text: person_name,
         value: person_id,
         selected: form.object.person_id == person_id,
       }
-    }.select do |option|
-      form.object.new_record? || option[:selected]
-    end,
+    end
+  ).select do |option|
+    form.object.new_record? || option[:selected]
+  end,
   error_message: errors_for_input(form.object.errors, :person_id),
 } %>
 
