Add blank Person option for new Role Appointments
We should only include a blank option on newly created role appointments, because the user cannot change the person field when editing existing ones (and the presence of a blank option would imply that they can remove the person, which they can't).

--- a/app/views/admin/role_appointments/_form.html.erb
+++ b/app/views/admin/role_appointments/_form.html.erb
@@ -13,6 +13,7 @@
     }.select do |option|
       form.object.new_record? || option[:selected]
     end,
+  include_blank: form.object.new_record?,
   error_message: errors_for_input(form.object.errors, :person_id),
 } %>
 
