--- a/app/components/admin/edition_images/image_component.html.erb
+++ b/app/components/admin/edition_images/image_component.html.erb
@@ -20,7 +20,7 @@
     <%= link_to("Edit details", edit_admin_edition_image_path(edition, image), class: "govuk-link govuk-!-margin-top-2 app-view-edition-resource__actions__link") %>
     <%= link_to("Delete image", confirm_destroy_admin_edition_image_path(edition, image), class: "govuk-link gem-link--destructive govuk-!-margin-top-2 app-view-edition-resource__actions__link") %>
 
-    <% if edition.can_have_custom_lead_image? %>
+    <% if can_be_custom_lead_image? %>
       <%= form_with url: admin_edition_lead_image_path(edition, image), method: :patch do |form| %>
         <%= render "govuk_publishing_components/components/button", {
           text: "Select as lead image",
