--- a/app/views/admin/take_part_pages/_form.html.erb
+++ b/app/views/admin/take_part_pages/_form.html.erb
@@ -49,16 +49,25 @@
         error_items: errors_for(form.object.errors, :body),
       } %>
 
-      <%= render "components/single-image-upload", {
-        id: "take_part_page",
-        name: "take_part_page",
-        page_errors: form.object.errors.any?,
-        error_items: errors_for(form.object.errors, :image),
-        filename: form.object.image.filename,
-        image_cache: (form.object.image.image_cache.presence),
-        image_src: form.object.image.url,
-        image_alt: form.object.image_alt_text,
-      } %>
+      <%= form.fields_for :image do |_image_fields| %>
+        <%= render "components/single-image-upload", {
+          title: "Image",
+          name: "take_part_page[image_attributes]",
+          id: "take_part_page_image",
+          image_id: "take_part_page_image_file",
+          image_name: "take_part_page[image_attributes][file]",
+          filename: form.object.image.file.identifier,
+          alt_text_name: "take_part_page[image_alt_text]",
+          alt_text_id: "take_part_page_image_alt_text",
+          image_alt: form.object.image_alt_text,
+          page_errors: form.object.errors.any?,
+          error_items: errors_for(form.object.errors, :"image.file"),
+          image_src: form.object.image.url,
+          image_cache_name: "take_part_page[image_attributes][file_cache]",
+          image_cache: (form.object.image.file_cache.presence),
+        } %>
+      <% end %>
+
       <div class="govuk-button-group govuk-!-margin-top-8">
         <%= render "govuk_publishing_components/components/button", {
           text: "Save",
