--- a/app/views/admin/document_collection_email_subscriptions/_form.html.erb
+++ b/app/views/admin/document_collection_email_subscriptions/_form.html.erb
@@ -7,7 +7,7 @@
         value: false,
         text: "Emails about this page",
         hint_text: "Users will get an email when the document collection or any of the content listed on it is updated.",
-        checked: true,
+        checked: has_page_level_notifications?(@collection),
         bold: true,
       },
       {
@@ -15,7 +15,7 @@
         text: "Emails about the topic",
         bold: true,
         hint_text: "Users will get an email when any content related to the topic is updated. You choose the topic from the topic taxonomy.",
-        checked: false,
+        checked: emails_about_this_topic_checked?(@collection, params),
         conditional: render("taxonomy_choice"),
       },
     ],
