Use asset-id for for consultation_response_form_data
In order for consultation_response_form to move away from using legacy_url_path
It needs to use asset-id. This PR creates the relationship to allow consultation_response_form
to use_non_legacy_endpoints and create assets in whitehall.
It also introduces the functionality to publish Consultation only when all the assets related to the
consultation form is uploaded i;e block publishing if assets are not uploaded.

Co-authored-by: Iris Lau <Iris.lau@digital.cabinet-office.gov.uk>

--- a/app/views/admin/consultations/_form.html.erb
+++ b/app/views/admin/consultations/_form.html.erb
@@ -100,11 +100,15 @@
 
           <%= response_form.fields_for :consultation_response_form_data, consultation_response_form_data do |consultation_response_form_data_form| %>
             <%= consultation_response_form_data_form.hidden_field  :file_cache, value: consultation_response_form_data.file_cache %>
-
             <% if consultation_response_form.consultation_response_form_data.try(:persisted?) %>
               <div class="attachment">
-                <p class="govuk-body">Current data: <%= link_to File.basename(consultation_response_form_data.file.path), consultation_response_form_data.file.url, class: "govuk-link" %></p>
-
+                  <p class="govuk-body">Current data:
+                    <% if consultation_response_form_data.all_asset_variants_uploaded? %>
+                      <%= link_to File.basename(consultation_response_form_data.file.path), consultation_response_form_data.file.url, class: "govuk-link" %>
+                    <% else %>
+                      <%= File.basename(consultation_response_form_data.file.path) %> <span class="govuk-tag govuk-tag--green">Processing</span>
+                    <% end %>
+                  </p>
                 <%= render "govuk_publishing_components/components/radio", {
                   heading: "Actions:",
                   name: "edition[consultation_participation_attributes][consultation_response_form_attributes][attachment_action]",
