--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,7 +25,7 @@
   <% if t('admin.whats_new.show_banner') %>
     <div class="govuk-design-system-styling">
       <div class="<%= yield(:full_width) === "true" ? "app-width-container--full-width" : "container" %>">
-        <%= render "shared/phase_banner", tracking_module: "track-link-click", ga4_tracking: true %>
+        <%= render "shared/phase_banner", tracking_module: "track-link-click" %>
       </div>
     </div>
   <% end %>
