--- a/app/views/admin/cabinet_ministers/reorder_ministerial_organisations.html.erb
+++ b/app/views/admin/cabinet_ministers/reorder_ministerial_organisations.html.erb
@@ -1,4 +1,4 @@
 <% content_for :page_title, "Reorder Whip ordering" %>
 <% content_for :context, "Whip ordering" %>
 
-<%= render "reorder", list: @organisations, name: "organisation[ordering]", cancel_path: "#{admin_cabinet_ministers_path}#organisations" %>
+<%= render "reorder", list: @organisations, name: "organisation[ordering]", form_url: admin_cabinet_ministers_path, cancel_path: "#{admin_cabinet_ministers_path}#organisations" %>
