--- a/app/views/admin/features/new.html.erb
+++ b/app/views/admin/features/new.html.erb
@@ -19,7 +19,7 @@
           heading_size: "l",
         },
         hint: "Select a 960px wide and 640px tall image to be shown when featuring",
-        name: "feature[image]",
+        name: "feature[image_attributes][file]",
         id: "feature_image",
         error_items: errors_for(@feature.errors, :image),
       } %>
