--- a/app/views/admin/authors/show.html.erb
+++ b/app/views/admin/authors/show.html.erb
@@ -1,3 +1,9 @@
-<% page_title "Contact details for #{@user.name}" %>
-<h1>Contact details for <%= @user.name %></h1>
-<p class="email"><%= mail_to @user.email %></p>
+<% content_for :page_title, "Contact details for #{@user.name}" %>
+<% content_for :title, "Contact details for #{@user.name}" %>
+<% content_for :title_margin_bottom, 6 %>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <p><%= mail_to @user.email %></p>
+  </div>
+</div>
