Ensure user gets readable errors when link validation errors occur
At the moment, users are unable to force schedule editions when
the DataHygiene::GovspeakLinkValidator throws errors for invalid links.

They are provided no information about which link is invalid or how
to fix it despite us having access to that information pretty readily.

This takes a first stab at resolving the issue. It is not a great
solution or implementation, but it works.

A far better solution would be to move the sidebar notices partial
into a view component and handle rendering the link and fix in the same
format as that of broken links.

--- a/app/views/admin/editions/show/_sidebar_notices.html.erb
+++ b/app/views/admin/editions/show/_sidebar_notices.html.erb
@@ -3,7 +3,7 @@
     <% if force_scheduler.can_transition? && !force_scheduler.can_perform? %>
       <%= render "components/inset_prompt", {
         title: "This edition cannot be scheduled",
-        description: "#{force_scheduler.failure_reason}",
+        description: sanitize(force_scheduler.failure_reason),
         error: true,
       } %>
     <% end %>
