Remove "tabs" from secondary nav aria labels
A recent accessibility review of Whitehall raised a WCAG 2.1 level A failure for secondary navigation within Whitehall. Specifying an aria label using the word "tabs" implied that the secondary navigation links should behave as tabs, instead of as links, which could be confusing for non-sighted users.

--- a/app/views/admin/document_collection_group_memberships/index.html.erb
+++ b/app/views/admin/document_collection_group_memberships/index.html.erb
@@ -19,7 +19,7 @@
     </p>
 
     <%= render "components/secondary_navigation", {
-      aria_label: "Document collection group navigation tabs",
+      aria_label: "Document collection group navigation",
       items: secondary_navigation_tabs_items(@group, request.path),
     } %>
 
