--- a/app/views/admin/historical_accounts/index.html.erb
+++ b/app/views/admin/historical_accounts/index.html.erb
@@ -21,7 +21,7 @@
     </p>
 
     <%= render "components/secondary_navigation", {
-     aria_label: "People navigation tabs",
+     aria_label: "People navigation",
      items: secondary_navigation_tabs_items(@person, request.path),
     } %>
 
