--- a/app/views/admin/organisation_translations/index.html.erb
+++ b/app/views/admin/organisation_translations/index.html.erb
@@ -15,7 +15,7 @@
     </p>
 
     <%= render "components/secondary_navigation", {
-      aria_label: "Organisation navigation tabs",
+      aria_label: "Organisation navigation",
       items: secondary_navigation_tabs_items(@organisation, request.path),
     } %>
   </div>
