--- a/app/views/admin/corporate_information_pages/index.html.erb
+++ b/app/views/admin/corporate_information_pages/index.html.erb
@@ -11,7 +11,7 @@
 <p class="govuk-body"><%= view_on_website_link_for @organisation, class: "govuk-link" %></p>
 
 <%= render "components/secondary_navigation", {
-  aria_label: "Organisation navigation tabs",
+  aria_label: "Organisation navigation",
   items: secondary_navigation_tabs_items(@organisation, request.path),
 } %>
 
