--- a/app/views/admin/financial_reports/index.html.erb
+++ b/app/views/admin/financial_reports/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <%= render "components/secondary_navigation", {
-  aria_label: "Organisation navigation tabs",
+  aria_label: "Organisation navigation",
   items: secondary_navigation_tabs_items(@organisation, request.path),
 } %>
 
