--- a/app/views/admin/organisations/features.html.erb
+++ b/app/views/admin/organisations/features.html.erb
@@ -14,7 +14,7 @@
 
 <div class="govuk-!-margin-bottom-8">
   <%= render "components/secondary_navigation", {
-    aria_label: "Organisation navigation tabs",
+    aria_label: "Organisation navigation",
     items: secondary_navigation_tabs_items(@organisation, request.path),
   } %>
 </div>
