--- a/app/views/admin/people/show.html.erb
+++ b/app/views/admin/people/show.html.erb
@@ -19,7 +19,7 @@
     <p class="govuk-body"><%= view_on_website_link_for @person, class: "govuk-link", target: "blank" %></p>
 
     <%= render "components/secondary_navigation", {
-      aria_label: "People navigation tabs",
+      aria_label: "People navigation",
       items: secondary_navigation_tabs_items(@person, request.path),
     } %>
 
