--- a/app/views/admin/policy_groups/edit.html.erb
+++ b/app/views/admin/policy_groups/edit.html.erb
@@ -10,7 +10,7 @@
     } %>
 
     <%= render "components/secondary_navigation", {
-      aria_label: "Policy group navigation tabs",
+      aria_label: "Policy group navigation",
       items: secondary_navigation_tabs_items(@policy_group, request.path),
     } %>
 
