--- a/app/views/admin/social_media_accounts/index.html.erb
+++ b/app/views/admin/social_media_accounts/index.html.erb
@@ -13,7 +13,7 @@
 </p>
 
 <%= render "components/secondary_navigation", {
-  aria_label: "Organisation navigation tabs",
+  aria_label: "Organisation navigation",
   items: secondary_navigation_tabs_items(@socialable, request.path),
 } %>
 
