--- a/app/views/admin/world_location_news/features.html.erb
+++ b/app/views/admin/world_location_news/features.html.erb
@@ -14,7 +14,7 @@
 
 <div class="govuk-!-margin-bottom-8">
   <%= render "components/secondary_navigation", {
-    aria_label: "World location news navigation tabs",
+    aria_label: "World location news navigation",
     items: secondary_navigation_tabs_items(@world_location_news, request.path),
   } %>
 </div>
