--- a/app/views/admin/world_location_news_translations/index.html.erb
+++ b/app/views/admin/world_location_news_translations/index.html.erb
@@ -16,7 +16,7 @@
       </p>
 
       <%= render "components/secondary_navigation", {
-        aria_label: "World location news navigation tabs",
+        aria_label: "World location news navigation",
         items: secondary_navigation_tabs_items(@world_location_news, request.path),
       } %>
 
