--- a/app/views/admin/worldwide_organisations/show.html.erb
+++ b/app/views/admin/worldwide_organisations/show.html.erb
@@ -15,7 +15,7 @@
     </p>
 
     <%= render "components/secondary_navigation", {
-      aria_label: "Worldwide organisation navigation tabs",
+      aria_label: "Worldwide organisation navigation",
       items: secondary_navigation_tabs_items(@worldwide_organisation, request.path),
     } %>
   </div>
