--- a/app/views/admin/worldwide_organisations_translations/index.html.erb
+++ b/app/views/admin/worldwide_organisations_translations/index.html.erb
@@ -11,7 +11,7 @@
 <p class="govuk-body"><%= view_on_website_link_for @worldwide_organisation, class: "govuk-link" %></p>
 
 <%= render "components/secondary_navigation", {
-  aria_label: "Worldwide organisation navigation tabs",
+  aria_label: "Worldwide organisation navigation",
   items: secondary_navigation_tabs_items(@worldwide_organisation, request.path),
 } %>
 
