Further accessibility improvements to secondary navigation usage
A recent accessibility audit of Whitehall returned a level A WCAG failure because navigation menus were labelled as "tabs" on some Whitehall pages. Elements labelled "tabs" should have tab-like behaviour, instead of menu link behaviour. We are therefore removing all mentions of "tabs" from secondary navigation aria labels.

--- a/app/views/admin/get_involved/index.html.erb
+++ b/app/views/admin/get_involved/index.html.erb
@@ -9,7 +9,7 @@
     </p>
 
     <%= render "components/secondary_navigation", {
-      aria_label: "Get involved tabs",
+      aria_label: "Get involved navigation",
       items: [
         {
           label: "Get involved",
