--- a/app/views/admin/take_part_pages/index.html.erb
+++ b/app/views/admin/take_part_pages/index.html.erb
@@ -13,7 +13,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= render "components/secondary_navigation", {
-      aria_label: "Get involved tabs",
+      aria_label: "Get involved navigation",
       items: [
         {
           label: "Get involved",
