--- a/app/views/admin/topical_event_about_pages/show.html.erb
+++ b/app/views/admin/topical_event_about_pages/show.html.erb
@@ -12,7 +12,7 @@
 
 <div class="govuk-!-margin-bottom-8">
   <%= render "components/secondary_navigation", {
-    aria_label: "Topical Events tabs",
+    aria_label: "Topical Events navigation",
     items: topical_event_nav_items(@topical_event, request.path),
   } %>
 </div>
