--- a/app/components/admin/edition_images/image_component.html.erb
+++ b/app/components/admin/edition_images/image_component.html.erb
@@ -1,7 +1,8 @@
  <li class="govuk-grid-row">
   <div class="govuk-grid-column-one-third">
-    <img src="<%= image.url %>" alt="<%= preview_alt_text %>" class="app-view-edition-resource__preview">
-    <% unless image.image_data&.all_asset_variants_uploaded? %>
+    <% if image.image_data&.all_asset_variants_uploaded? %>
+      <img src="<%= image.url %>" alt="<%= preview_alt_text %>" class="app-view-edition-resource__preview">
+    <% else %>
       <span class="govuk-tag govuk-tag--green">Processing</span>
     <% end %>
   </div>
