Add procesing label for person views
Form edit view
Summary view

If not all assets are uploaded, the image load won't be sent to publishing api.
In order to make it known to the user that this might be the case, we display a
PROCESSING label when image assets are still uploading.

The label will stay on indefinitely if something is wrong with an asset upload.

--- a/app/views/admin/people/_form.html.erb
+++ b/app/views/admin/people/_form.html.erb
@@ -71,6 +71,7 @@
       image_src: person.image.url,
       image_cache_name: "person[image_attributes][file_cache]",
       image_cache: person.image.file_cache.presence,
+      image_uploaded: person.image.all_asset_variants_uploaded?,
     } %>
   <% end %>
 
