--- a/app/views/admin/take_part_pages/_form.html.erb
+++ b/app/views/admin/take_part_pages/_form.html.erb
@@ -64,6 +64,7 @@
           image_src: form.object.image.url,
           image_cache_name: "take_part_page[image_attributes][file_cache]",
           image_cache: (form.object.image.file_cache.presence),
+          image_uploaded: form.object.image.all_asset_variants_uploaded?,
         } %>
       <% end %>
 
